fix: consistent spacing on alumni sitemap

--- a/css/_sitemap.scss
+++ b/css/_sitemap.scss
@@ -98,7 +98,9 @@
     li {
       @include breakpoint(teen-up) {
         width: 100%;
+      ul li {
         margin-top: .5em;
+        }
       }
     }
   }
